# PPTAgent

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
config/: default.yaml  development.yaml
docs/: 0_plan.md  12_summary.md  1_infra.md  2_basicOperations.md  3_elementEditing.md  index.md  requirements.txt
pptagent/: __init__.py
pptagent/agent/: __init__.py
pptagent/core/: __init__.py  change_manager.py  converter.py  document.py  exceptions.py  session.py
pptagent/engines/: __init__.py  ocr_engine.py
pptagent/knowledge/: __init__.py
pptagent/tools/: __init__.py  base.py
pptagent/tools/extraction/: __init__.py  chart.py  diagram.py  formula.py  image.py  media.py  reader.py  table.py  text.py
pptagent/tools/file/: finder.py  io.py
pptagent/tools/insertion/: __init__.py  chart_inserter.py  image_inserter.py  table_inserter.py  text_inserter.py
pptagent/tools/manipulation/: __init__.py  element_delete.py  element_geometry.py  text_formatter.py
pptagent/tools/slide/: add.py  delete.py  duplicate.py  reorder.py
pptagent/utils/: __init__.py  config.py  logger.py
scripts/: clean.sh  create_skeleton.sh  env.sh  install_system_deps.sh  run_lint.sh  run_tests.sh  setup_conda_env.sh  smoke_test.py  verify_deps.py
